--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/netinfo": "8.2.0",
+    "@react-native-picker/picker": "2.4.0",
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "amazon-cognito-identity-js": "^5.2.9",
+    "aws-amplify": "^4.3.26",
+    "aws-amplify-react-native": "^6.0.5",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
